# wdprir2023python

./: pyproject.toml
src/: receiver01a.py  receiver02a.py  receiver03a.py  receiver04a.py  receiver05a.py  receiver06a.py  sender01a.py  sender02a.py  sender03a.py  sender04a.py  sender05a.py  sender06a.py
